--- a/templates/urlerror.html
+++ b/templates/urlerror.html
@@ -14,7 +14,7 @@
         </br>
         </br>
         </br>
-        <center><h3 style="color:red;">  {{ result }} </h3> </center>
+        <center><h3 style="color:red;"> The url you provided is incorrect, please try again with a valid URL </h3> </center>
         {% endblock %}
     </div>
   </body>
