--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,13 @@ document.addEventListener('DOMContentLoaded', (event) => {
 <!-- <h2>Chek URL</h2> -->
 <form name = "form" action = "/" %}" method = "POST" >
 {% csrf_token %} 
-<input type = "text" style = "" pattern="[Hh][Tt][Tt][Pp][Ss]?:\/\/(?:(?:[a-zA-Z\u00a1-\uffff0-9]+-?)*[a-zA-Z\u00a1-\uffff0-9]+)(?:\.(?:[a-zA-Z\u00a1-\uffff0-9]+-?)*[a-zA-Z\u00a1-\uffff0-9]+)*(?:\.(?:[a-zA-Z\u00a1-\uffff]{2,}))(?::\d{2,5})?(?:\/[^\s]*)?" required placeholder = "url" name = "url" />
+<input type = "text" style = "" pattern="[Hh][Tt][Tt][Pp][Ss]?:\/\/(?:(?:[a-zA-Z\u00a1-\uffff0-9]+-?)*[a-zA-Z\u00a1-\uffff0-9]+)(?:\.(?:[a-zA-Z\u00a1-\uffff0-9]+-?)*[a-zA-Z\u00a1-\uffff0-9]+)*(?:\.(?:[a-zA-Z\u00a1-\uffff]{2,}))(?::\d{2,5})?(?:\/[^\s]*)?" required placeholder = "url" name = "url" id="checkURL" />
+<script type="text/javascript">
+var input = document.getElementById('checkURL');
+input.oninvalid = function(event) {
+    event.target.setCustomValidity('Please type the url in http://example.com');
+}
+</script>
 <button class="mdl-button mdl-js-button mdl-button--primary" type = "submit" value = "Check">
 <strong>Check</strong>
 </button>
