--- a/templates/urlerror.html
+++ b/templates/urlerror.html
@@ -25,7 +25,7 @@ document.addEventListener('DOMContentLoaded', (event) => {
 <hr>
 <center>
 {% block content %}
-<center><h3 style="color:red;"> The url you provided is incorrect, please try again with a valid URL </h3> </center>
+<center><h3 style="color:red;"> The url you provided is either incorrect or is not an alive domain, please try again with a valid alive domain</h3> </center>
 {% endblock %}
 </center>
 </div></form></center></div></div>
