--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@ document.addEventListener('DOMContentLoaded', (event) => {
 <a style="cursor: pointer" onclick="localStorage.setItem('mode', (localStorage.getItem('mode') || 'dark') === 'dark' ? 'bright' : 'dark'); localStorage.getItem('mode') === 'dark' ? document.querySelector('body').classList.add('dark') : document.querySelector('body').classList.remove('dark')" title="Switch to light or dark theme">🌓 Light | dark mode</a>
 </p></div></header>
 <div id="wrapper"><div id="container">
-<h1 class="post-title" ><a href="#">Malicious URL Detector</a></h1>
+<h1 class="post-title" ><a href="/">Malicious URL Detector</a></h1>
 <hr>
 <center>
 <!-- <h2>Chek URL</h2> -->
